# smedja

./: .gitignore  CHANGELOG.md  Cargo.toml  DELIVERY.md  LICENSE  README.md  review-smedja-2026-07-02.md  review_smedja.md  rewiev-smedja-0628-md
assets/: .SRCINFO  (+4 more)
crates/smedja-adapter/: Cargo.toml
crates/smedja-adapter/src/: acp_client.rs  anthropic.rs  bedrock.rs  berget.rs  claude_cli.rs  codex_cli.rs  copilot.rs  crush.rs  error.rs  gemini.rs  gpu.rs  kimi_cli.rs  lib.rs  local.rs  minimax.rs  ollama.rs  openai.rs  openai_compat.rs  opencode.rs  otel.rs  pool_cli.rs  poolside.rs  provider.rs  sse.rs  subprocess.rs  types.rs
crates/smedja-adapter/src/anthropic/: body.rs  mod.rs  sse_loop.rs
crates/smedja-adapter/src/claude_cli/: gate.rs  mod.rs  parse.rs
crates/smedja-adapter/src/codex_cli/: mod.rs  parse.rs
crates/smedja-adapter/src/crush/: code.rs  command.rs  crusher.rs  filters.rs  mod.rs  pipeline.rs  registry.rs  strategies.rs  tests.rs
crates/smedja-adapter/src/local/: inventory.rs  metrics.rs  mod.rs  provider.rs  types.rs
crates/smedja-assayer/: Cargo.toml
crates/smedja-assayer/src/: assayer.rs  bash_arity.rs  config.rs  lib.rs  parallel.rs  types.rs
crates/smedja-bellows/: Cargo.toml
crates/smedja-bellows/src/: dispatcher.rs  event.rs  handle.rs  lib.rs  stream_event.rs
crates/smedja-bellows/src/event/: correlation.rs  mod.rs  turn_event.rs
crates/smedja-cli/: Cargo.toml
crates/smedja-cli/src/: audit.rs  cli.rs  daemon.rs  doctor.rs  eval.rs  formatting.rs  governance.rs  lib.rs  local.rs  loop_cmd.rs  mcp.rs  paths.rs  prices.rs  run.rs  sandbox.rs  security.rs  sessions.rs  skills.rs  tasks.rs  terminal.rs  tests.rs  time_window.rs  timeline.rs  tool_gate.rs  usage.rs  workspace.rs
crates/smedja-cli/src/cli/: commands.rs
crates/smedja-cli/src/service/: linux.rs
crates/smedja-eval/: Cargo.toml
crates/smedja-eval/src/: case.rs  engine.rs  lib.rs  report.rs  scoring.rs  telemetry.rs
crates/smedja-eval/tests/: routing_gate.rs
crates/smedja-graph/: Cargo.toml
crates/smedja-graph/src/: error.rs  indexer.rs  lib.rs  store.rs  types.rs
crates/smedja-ingot/: Cargo.toml
crates/smedja-ingot/src/: audit.rs  checkpoint.rs  conversation.rs  cost.rs  error.rs  guard.rs  handle.rs  jsonl.rs  lib.rs  loop_state.rs  maintenance.rs  mcp.rs  methodology.rs  metrics_rollup.rs  migrations.rs  openspec_store.rs  prompt_hash.rs  savings_rollup.rs  session.rs  task.rs  token_snapshot.rs
crates/smedja-ingot/src/handle/: audit.rs  checkpoints.rs  cost.rs  jsonl.rs  loops.rs  mcp.rs  mod.rs  prompt_hashes.rs  rollups.rs  sessions.rs  tasks.rs  token_snapshots.rs
crates/smedja-ingot/src/metrics_rollup/: compute.rs  mod.rs  tier.rs
crates/smedja-ingot/src/ops/: audit.rs  checkpoints.rs  cost.rs  jsonl.rs  loops.rs  mcp.rs  mod.rs  sessions.rs  tasks.rs
crates/smedja-ingot/src/session/: mod.rs  queries.rs  updates.rs
crates/smedja-loop/: Cargo.toml
crates/smedja-loop/src/: config.rs  engine.rs  lib.rs  mining.rs  role.rs  state.rs  telemetry.rs  verify.rs
crates/smedja-loop/src/engine/: checkpoint.rs  drive.rs  mod.rs  roles.rs  slice.rs  tests.rs  types.rs
crates/smedja-lsp/: Cargo.toml
crates/smedja-lsp/examples/: mock_lsp.rs
crates/smedja-lsp/src/: client.rs  lib.rs  manager.rs  types.rs
crates/smedja-memory/: Cargo.toml
crates/smedja-memory/src/: aligner.rs  budget.rs  cold.rs  content.rs  error.rs  guides.rs  lib.rs  memory.rs  skills.rs  types.rs  working.rs
crates/smedja-memory/src/memory/: config.rs  loaders.rs  mod.rs  strata.rs  tests.rs  working.rs  working_memory.rs
crates/smedja-methodology/: Cargo.toml
crates/smedja-methodology/src/: clean.rs  config.rs  file_size.rs  lib.rs  ponytail.rs  quality.rs  skill_inject.rs  tdd.rs  types.rs
crates/smedja-plugins/: Cargo.toml
crates/smedja-plugins/src/: bundle.rs  error.rs  lib.rs  parse.rs  registry.rs  selector.rs  types.rs
crates/smedja-plugins/src/registry/: mod.rs  ops.rs  scan.rs  sync.rs
crates/smedja-review/: Cargo.toml
crates/smedja-review/src/: bar.rs  detect.rs  deterministic.rs  lib.rs
crates/smedja-rpc/: Cargo.toml
crates/smedja-rpc/schema/: types.json
crates/smedja-rpc/src/: client.rs  codec.rs  codes.rs  generated.rs  lib.rs  router.rs  server.rs  types.rs
crates/smedja-rpc/tests/: integration.rs
crates/smedja-security/: Cargo.toml
crates/smedja-security/src/: config.rs  finding.rs  lib.rs  output.rs  posture.rs  sbom.rs
crates/smedja-spec/: Cargo.toml
crates/smedja-spec/src/: engine.rs  lib.rs  model.rs  parse.rs
crates/smedja-sre/: Cargo.toml
crates/smedja-sre/src/: config.rs  error.rs  lib.rs  logs.rs  metrics.rs  otel.rs
crates/smedja-telemetry/: Cargo.toml
crates/smedja-telemetry/src/: lib.rs
crates/smedja-testkit/: Cargo.toml
crates/smedja-testkit/src/: detect.rs  lib.rs  parse.rs  run.rs
crates/smedja-types/: Cargo.toml
crates/smedja-types/src/: lib.rs
crates/smedja-vault/: Cargo.toml
crates/smedja-vault/src/: ann.rs  block.rs  diary.rs  embedder.rs  entries.rs  error.rs  lib.rs  similarity.rs  vault.rs  vector_search.rs
crates/smedja-vault/src/vault/: diary.rs  entries.rs  identity.rs  mod.rs  query.rs  search.rs  types.rs
term/crates/st-agent/: Cargo.toml
term/crates/st-agent/src/: approval.rs  client.rs  discovery.rs  event.rs  events.rs  lib.rs  pane_state.rs  session.rs  tests.rs  types.rs
term/crates/st-app/: Cargo.toml
term/crates/st-app/src/: agent_bridge.rs  app.rs  clipboard.rs  commands.rs  input.rs  launch.rs  lib.rs  mouse.rs  render.rs  ssh_mux.rs  status.rs  tab.rs  tests.rs
term/crates/st-blocks/: Cargo.toml
term/crates/st-blocks/src/: lib.rs
term/crates/st-config/: Cargo.toml
term/crates/st-config/src/: colors.rs  config.rs  contrast.rs  lib.rs  migrate.rs  raw.rs  types.rs
term/crates/st-glyph/: Cargo.toml
term/crates/st-glyph/src/: badges.rs  builtins.rs  lib.rs  metrics.rs  protocol.rs  raster.rs  registry.rs
term/crates/st-pty/: Cargo.toml
term/crates/st-pty/examples/: vtdump.rs
term/crates/st-render/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: main.rs
(+245 files in other folders)
