[workspace]
members = [
    "bin/smdjad",
    "bin/smedja-tui",
    "bin/smj",
    "crates/smedja-adapter",
    "crates/smedja-agent-events",
    "crates/smedja-assayer",
    "crates/smedja-auth",
    "crates/smedja-bellows",
    "crates/smedja-graph",
    "crates/smedja-ingot",
    "crates/smedja-loop",
    "crates/smedja-memory",
    "crates/smedja-methodology",
    "crates/smedja-plugins",
    "crates/smedja-rpc",
    "crates/smedja-security",
    "crates/smedja-sre",
    "crates/smedja-telemetry",
    "crates/smedja-types",
    "crates/smedja-vault",
    "term/bin/smedja",
    "term/crates/st-agent",
    "term/crates/st-blocks",
    "term/crates/st-config",
    "term/crates/st-glyph",
    "term/crates/st-pty",
    "term/crates/st-render",
    "term/crates/st-statusbar",
    "xtask",
]
resolver = "2"

[workspace.package]
version    = "0.13.0"
edition    = "2021"
license    = "Apache-2.0"
repository = "https://github.com/mwigge/smedja"
rust-version = "1.82"

[workspace.dependencies]

# async trait methods (dyn-dispatched ports)
async-trait  = "0.1"

# error handling
anyhow       = "1"

# http
axum         = { version = "0.8", features = ["ws"] }

# byte casting (zero-cost f32 ↔ u8 for embedding BLOB serialisation)
bytemuck     = "1"
chrono       = { version = "0.4", features = ["serde"] }

# cli
clap         = { version = "4", features = ["derive", "env"] }
cosmic-text  = "0.12"

# terminal (client + term emulator)
crossterm    = "0.28"
futures-core = "0.3"
futures-util = "0.3"
opentelemetry          = "0.27"
opentelemetry-otlp     = { version = "0.27", features = ["grpc-tonic", "http-proto"] }
opentelemetry-semantic-conventions = "0.27"
opentelemetry_sdk      = { version = "0.27", features = ["rt-tokio"] }
parking_lot  = "0.12"

# PTY (smedja GPU terminal)
portable-pty = "0.8"
ratatui      = "0.29"

# concurrency / utilities
rayon        = "1"
regex        = "1"
reqwest      = { version = "0.12", features = ["json", "stream"] }

# storage
rusqlite     = { version = "0.32", features = ["bundled"] }
rustyline    = "14"

# xtask — JSON Schema → Rust type generation
schemars     = "0.8"

# serialisation
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
serde_yaml   = "0.9"

sha2         = "0.10"

# code graph
streaming-iterator = "0.1"

# layout
taffy        = "0.5"
thiserror    = "2"
# async runtime
tokio        = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# testing
tokio-test   = "0.4"
toml         = "0.8"
tower        = "0.5"
tower-http   = { version = "0.6", features = ["trace", "cors"] }

# observability
tracing                = "0.1"
tracing-subscriber     = { version = "0.3", features = ["env-filter", "json"] }
tree-sitter            = "0.24"
tree-sitter-go         = "0.23"
tree-sitter-python     = "0.23"
tree-sitter-rust       = "0.23"
tree-sitter-typescript = "0.23"

# ids / time
url          = "2"
uuid         = { version = "1", features = ["v4", "serde"] }
vte          = "0.13"
walkdir            = "2"

# GPU rendering (smedja terminal)
wgpu         = "22"

# binary detection
which        = "6"
winit        = "0.30"
