[package]
name        = "xtask"
description = "Cargo xtask helper for smedja"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow     = { workspace = true }
clap       = { workspace = true }
schemars   = "0.8"
serde_json = { workspace = true }
typify     = "0.4"
