[package]
name        = "smedja-adapter"
description = "Provider HTTP streaming adapters (OpenAI, Gemini, …)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
anyhow       = { workspace = true }
futures-core = { workspace = true }
opentelemetry          = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry_sdk      = { workspace = true }
reqwest      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
smedja-rpc   = { path = "../smedja-rpc" }
thiserror    = { workspace = true }
tokio        = { workspace = true }
tokio-stream = { workspace = true }
tracing      = { workspace = true }
which        = { workspace = true }

[dev-dependencies]
futures-util    = { workspace = true }
opentelemetry_sdk = { workspace = true }
