[package]
name        = "smedja-adapter"
description = "Provider HTTP streaming adapters (OpenAI, Gemini, …)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
anyhow       = { workspace = true }
futures-core = { workspace = true }
opentelemetry          = { workspace = true }
reqwest      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
smedja-telemetry = { path = "../smedja-telemetry" }
thiserror    = { workspace = true }
tokio        = { version = "1", default-features = false, features = ["io-util", "macros", "process", "rt", "sync"] }
tokio-stream = { workspace = true }
tracing      = { workspace = true }
which        = { workspace = true }

[dev-dependencies]
futures-util    = { workspace = true }
tokio           = { version = "1", default-features = false, features = ["io-util", "macros", "net", "process", "rt", "sync"] }
