[package]
name        = "smedja-assayer"
description = "Model routing by role × complexity × tier (replaces sommelier)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
anyhow      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
smedja-rpc  = { path = "../smedja-rpc" }
toml        = { workspace = true }
tracing     = { workspace = true }
