[package]
name        = "smedja-assayer"
description = "Model routing by role × complexity × tier (replaces sommelier)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
anyhow      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
smedja-rpc   = { path = "../smedja-rpc" }
smedja-types = { path = "../smedja-types" }
# Narrowed from the workspace ["full"] default: only async process spawning
# (git worktree management) is used, which needs the runtime + process feature.
tokio       = { version = "1", default-features = false, features = ["rt", "process"] }
toml        = { workspace = true }
tracing     = { workspace = true }
uuid        = { workspace = true }

[dev-dependencies]
tempfile    = "3"
