[package]
name        = "smedja-bellows"
description = "Turn lifecycle, event dispatch, pipeline (replaces pipeline)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
smedja-rpc    = { path = "../smedja-rpc" }
smedja-ingot  = { path = "../smedja-ingot" }
tokio         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
