[package]
name        = "smedja-bellows"
description = "Turn lifecycle, event dispatch, pipeline (replaces pipeline)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
anyhow        = { workspace = true }
opentelemetry = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
smedja-ingot  = { path = "../smedja-ingot" }
smedja-rpc    = { path = "../smedja-rpc" }
tokio         = { workspace = true }
tracing       = { workspace = true }
