[package]
name        = "smedja-cli"
description = "smedja control CLI implementation"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
anyhow          = { workspace = true }
chrono          = { workspace = true }
clap            = { workspace = true }
reqwest         = { workspace = true, features = ["blocking"] }
serde           = { workspace = true }
serde_json      = { workspace = true }
smedja-assayer  = { path = "../smedja-assayer" }
smedja-eval     = { path = "../smedja-eval" }
smedja-ingot    = { path = "../smedja-ingot" }
smedja-plugins  = { path = "../smedja-plugins" }
smedja-rpc      = { path = "../smedja-rpc" }
smedja-security = { path = "../smedja-security" }
st-config       = { path = "../../term/crates/st-config" }
tokio           = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }
which           = { workspace = true }

[dev-dependencies]
tempfile = "3"
toml     = { workspace = true }
