[package]
name        = "smedja-eval"
description = "Eval harness — case format, scoring strategies, run engine, and report for routing and agent evals"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
anyhow         = { workspace = true }
opentelemetry  = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
smedja-assayer = { path = "../smedja-assayer" }
smedja-loop    = { path = "../smedja-loop" }
smedja-types   = { path = "../smedja-types" }
thiserror      = { workspace = true }
toml           = { workspace = true }

[dev-dependencies]
tempfile = "3"
