[package]
name        = "smedja-graph"
description = "tree-sitter code indexer and graph_query tool"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
smedja-ingot = { path = "../smedja-ingot" }
tree-sitter  = { workspace = true }
rusqlite     = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
rayon        = { workspace = true }
