[package]
name        = "smedja-graph"
description = "tree-sitter code indexer and graph_query tool"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
anyhow       = { workspace = true }
rayon        = { workspace = true }
rusqlite     = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
smedja-ingot = { path = "../smedja-ingot" }
thiserror    = { workspace = true }
tracing      = { workspace = true }
tree-sitter  = { workspace = true }
