[package]
name        = "smedja-graph"
description = "tree-sitter code indexer and graph_query tool"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
rusqlite           = { workspace = true }
serde_json         = { workspace = true }
streaming-iterator = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tree-sitter        = { workspace = true }
tree-sitter-rust   = { workspace = true }
uuid               = { workspace = true }
walkdir            = { workspace = true }

[dev-dependencies]
tempfile = "3"
