[package]
name        = "smedja-ingot"
description = "SQLite audit log, cost ledger, checkpoints, session history"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
rusqlite   = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
chrono     = { workspace = true }
uuid       = { workspace = true }
