[package]
name        = "smedja-ingot"
description = "SQLite audit log, cost ledger, checkpoints, session history"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
anyhow     = { workspace = true }
chrono     = { workspace = true }
regex      = { workspace = true }
rusqlite   = { workspace = true }
serde      = { workspace = true }
smedja-types = { path = "../smedja-types" }
serde_json = { workspace = true }
thiserror  = { workspace = true }
# Narrowed from the workspace ["full"] default: this crate only needs the
# runtime (for spawn_blocking) and the test macros.
tokio      = { version = "1", default-features = false, features = ["rt", "macros"] }
tracing    = { workspace = true }
uuid       = { workspace = true }

[dev-dependencies]
tempfile   = "3"
