[package]
name        = "smedja-loop"
description = "Loop engine — bounded multi-role pipeline over an OpenSpec work envelope"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
anyhow             = { workspace = true }
opentelemetry      = { workspace = true }
opentelemetry_sdk  = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
sha2               = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
uuid               = { workspace = true }

[dev-dependencies]
tempfile = "3"
