[package]
name        = "smedja-lsp"
description = "smedja LSP client — spawns language servers, collects diagnostics"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
anyhow     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }
which      = { workspace = true }
