[package]
name        = "smedja-memory"
description = "WorkingMemory, strata compaction, and BuildPrompt for smedja"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
smedja-rpc = { path = "../smedja-rpc" }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
