[package]
name        = "smedja-memory"
description = "WorkingMemory, strata compaction, and BuildPrompt for smedja"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
anyhow     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
smedja-rpc = { path = "../smedja-rpc" }
thiserror  = { workspace = true }
tracing    = { workspace = true }
