[package]
name        = "smedja-methodology"
description = "TDD gate, ponytail gate, spec-first enforcement, OpenSpec integration"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
anyhow     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
smedja-rpc = { path = "../smedja-rpc" }
thiserror  = { workspace = true }
toml       = { workspace = true }
tracing    = { workspace = true }
