[package]
name        = "smedja-review"
description = "Polyglot deterministic code-review layer: format/lint/import-sort tools normalised to findings, plus a uniform quality bar"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
anyhow     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
toml       = { workspace = true }
tracing    = { workspace = true }
which      = { workspace = true }

[dev-dependencies]
tempfile = "3"
