[package]
name        = "smedja-rpc"
description = "JSON-RPC 2.0 types and UDS codec for smedja"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
uuid       = { workspace = true }
