[package]
name        = "smedja-rpc"
description = "JSON-RPC 2.0 types and UDS codec for smedja"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
anyhow     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tokio      = { workspace = true }
uuid       = { workspace = true }
