[package]
name        = "smedja-rpc"
description = "JSON-RPC 2.0 types and UDS codec for smedja"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
anyhow     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
# Narrowed from the workspace ["full"] default to just the UDS server/client
# surface this crate uses (net + io-util + sync channels + spawn + timeouts +
# the test macros).
tokio      = { version = "1", default-features = false, features = ["rt", "net", "io-util", "sync", "time", "macros"] }
uuid       = { workspace = true }
