[package]
name        = "smedja-security"
description = "smedja security plane — posture scanning, output scanning, SBOM assembly (advisory by default)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
regex        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
sha2         = { workspace = true }
smedja-ingot = { path = "../smedja-ingot" }
smedja-types = { path = "../smedja-types" }
thiserror    = { workspace = true }
toml         = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }
walkdir      = { workspace = true }

[dev-dependencies]
tempfile = "3"
