[package]
name        = "smedja-spec"
description = "Native OpenSpec engine: specs, changes, and the delta parser/merger"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
