[package]
name        = "smedja-sre"
description = "SRE agent tools: otel_query, metric_query, log_tail, alert webhook"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
anyhow     = { workspace = true }
reqwest    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
smedja-rpc = { path = "../smedja-rpc" }
thiserror  = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }
