[package]
name        = "smedja-sre"
description = "SRE agent tools: otel_query, metric_query, log_tail, alert webhook"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
reqwest    = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }

[dev-dependencies]
mockito = "1"
tokio   = { workspace = true }
