[package]
name        = "smedja-sre"
description = "SRE agent tools: otel_query, metric_query, log_tail, alert webhook"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
reqwest    = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
# Narrowed from the workspace ["full"] default: only the test macros + a
# current-thread runtime are needed (no production tokio APIs are used).
tokio      = { version = "1", default-features = false, features = ["rt", "macros"] }
tracing    = { workspace = true }

[dev-dependencies]
mockito = "1"
tokio   = { version = "1", default-features = false, features = ["rt", "macros"] }
