[package]
name        = "smedja-testkit"
description = "Runner-agnostic test discovery, execution, and structured report parsing"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
anyhow     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }
which      = { workspace = true }

[dev-dependencies]
tempfile = "3"
