[package]
name        = "smedja-vault"
description = "Vector KV store for cold memory retrieval"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
bytemuck   = { workspace = true }
rusqlite   = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
