[package]
name        = "st-agent"
description = "smedja: st-agent"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
anyhow     = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true, features = ["net", "io-util"] }
tracing    = { workspace = true }
uuid       = { workspace = true, features = ["v4"] }

[dev-dependencies]
smedja-bellows = { path = "../../../crates/smedja-bellows" }
