[package]
name        = "st-agent"
description = "smedja: st-agent"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
anyhow              = { workspace = true }
serde_json          = { workspace = true }
smedja-agent-events = { path = "../../../crates/smedja-agent-events" }
tokio               = { workspace = true, features = ["net", "io-util", "sync"] }
tracing             = { workspace = true }
uuid                = { workspace = true, features = ["v4"] }
