[package]
name        = "st-blocks"
description = "smedja-term: st-blocks"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
smedja-rpc   = { path = "../../../crates/smedja-rpc" }
smedja-ingot = { path = "../../../crates/smedja-ingot" }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
