[package]
name        = "st-blocks"
description = "smedja: block model — shell, agent, and system command blocks with SQLite persistence"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
anyhow       = { workspace = true }
chrono       = { workspace = true }
rusqlite     = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }
