[package]
name        = "st-config"
description = "smedja-term: st-config"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
anyhow       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
smedja-ingot = { path = "../../../crates/smedja-ingot" }
smedja-rpc   = { path = "../../../crates/smedja-rpc" }
tracing      = { workspace = true }
