[package]
name        = "st-config"
description = "smedja-term: configuration loading and the forged_terminal built-in theme"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
anyhow       = { workspace = true }
dirs         = "5"
mlua         = { version = "0.10", features = ["lua54", "vendored"] }
serde        = { workspace = true }
thiserror    = { workspace = true }
toml         = { workspace = true }
tracing      = { workspace = true }
