[package]
name        = "st-glyph"
description = "smedja-term: glyph shaping utilities and grid sizing"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
anyhow    = { workspace = true }
base64    = "0.22"
png       = "0.17"
tiny-skia = "0.12"
tracing   = { workspace = true }
