[package]
name        = "st-pty"
description = "smedja-term: PTY session, VT emulation, scrollback, copy mode"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
anyhow       = { workspace = true }
arboard      = "3"
parking_lot  = { workspace = true }
portable-pty = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
vte          = { workspace = true }
