[package]
name        = "st-pty"
description = "smedja: PTY session, VT emulation, scrollback, copy mode"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
anyhow       = { workspace = true }
arboard      = "3"
base64       = "0.22"
parking_lot  = { workspace = true }
portable-pty = { workspace = true }
st-glyph     = { path = "../st-glyph" }
thiserror    = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
vte          = { workspace = true }

[dev-dependencies]
tracing-test = "0.2"
