[package]
name        = "st-render"
description = "smedja-term: wgpu cell-grid renderer with glyph atlas"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
anyhow       = { workspace = true }
bytemuck     = { version = "1", features = ["derive"] }
cosmic-text  = { workspace = true }
image        = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
st-config    = { path = "../st-config" }
thiserror    = { workspace = true }
tracing      = { workspace = true }
wgpu         = { workspace = true }
winit        = { workspace = true }
